--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,47 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+.container{
+  max-width: 1340px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+@media only screen and (max-width:1340px) {
+  .container{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+@font-face {
+  font-family: 'Clear Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local(''),
+  url('../../public/fonts/ClearSans-Light.woff') format('woff'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('../../public/fonts/ClearSans-Light.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+@font-face {
+  font-family: 'Clear Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: local(''),
+  url('../../public/fonts/ClearSans-Medium.woff') format('woff'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('../../public/fonts/ClearSans-Medium.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+@font-face {
+  font-family: 'Clear Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+  url('../../public/fonts/ClearSans-Bold.woff') format('woff'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('../../public/fonts/ClearSans-Bold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+}
+
+
+
 
 a {
   color: inherit;
@@ -13,14 +54,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
