--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: rgba(236, 236, 236, 1);
 }
 .container{
   max-width: 1340px;
@@ -11,7 +13,15 @@ body {
   margin: 0 auto;
   padding: 0 10px;
 }
-
+.slick-next{
+  display: none !important;
+}
+.slick-prev{
+  display: none !important;
+}
+.slick-dots{
+  display: none !important;
+}
 @media only screen and (max-width:1340px) {
   .container{
     width: 100%;
