--- a/src/components/home/our-advantag/style.module.css
+++ b/src/components/home/our-advantag/style.module.css
@@ -33,6 +33,14 @@
     width: 211px;
     margin-bottom: 20px;
 }
+@media only screen and (max-width:900px) {
+    .our_advanges{
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
 @media only screen and (max-width:472px) {
     .our_advanges_card{
         display: flex;
