--- a/src/components/payment/payment-delivery/style.module.css
+++ b/src/components/payment/payment-delivery/style.module.css
@@ -29,3 +29,19 @@
 .payment_delivery_card p{
     white-space : pre-wrap
 }
+@media only screen and (max-width:900px) {
+    .payment_delivery{
+        background-color: white;
+        margin: 0 auto;
+        padding: 20px;
+        width: 95%;
+        margin-top: 20px;
+    }
+    .payment_delivery_cards{
+        flex-direction: column;
+    }
+    .payment_delivery_card{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
