--- a/src/components/home/our-partner/style.module.css
+++ b/src/components/home/our-partner/style.module.css
@@ -14,6 +14,11 @@
     background-color: white;
     border-radius: 3px;
 }
+.card img{
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+}
 @media only screen and (max-width:900px) {
     .section_our_partner{
         bottom: 0px;
