--- a/src/components/common/card/style.module.css
+++ b/src/components/common/card/style.module.css
@@ -28,7 +28,7 @@
     color: rgba(34, 34, 34, 1);
     width: 80%;
     margin-left: 14px;
-    margin-right: 14px;
+    padding-right: 4px;
     padding-top: 16px;
     text-transform: uppercase;
 }
@@ -69,9 +69,23 @@
 @media only screen and (max-width:694px) {
     .Card{
         width: 49%;
+        height: 100%;
     }
     .Card_imgs{
         width:100%;
+        height: 100%;
+    }
+    .Card_imgs span{
+        position: absolute;
+        left: 0px;
+        bottom: 5px;
+        background: linear-gradient(270deg, rgba(11, 63, 100, 0.15) 0%, rgba(11, 63, 100, 0.9) 100%);
+        color: white;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 24px;
+        font-family: 'Clear Sans';
+        padding: 2px 28px;
     }
    .Card_imgs img{
     width: 100%;
@@ -80,13 +94,13 @@
    .Card h4{
     font-family: 'Clear Sans';
     font-weight: 700;
-    font-size: 14px;
-    line-height: 25px;
+    font-size: 13px;
+    line-height: 20px;
     color: rgba(34, 34, 34, 1);
     width: 100%;
     margin-left: 4px;
     margin-right: 4px;
-    padding-top: 6px;
+    padding-top: 0px;
 }
 .card_buttons{
     margin-bottom: 9px;
