--- a/src/components/home/home-xit/style.module.css
+++ b/src/components/home/home-xit/style.module.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.xit_card img{
+    width: 100%;
+    height: 97.5%;
+   } 
 .xit_card{
     position: relative;
     display: flex;
@@ -29,7 +33,7 @@
     }
    .xit_card img{
     width: 100%;
-    height: 332px;
+    height: 272px;
    } 
    .xit_card h3{
     position: absolute;
