--- a/src/components/product/Content/style.module.css
+++ b/src/components/product/Content/style.module.css
@@ -136,6 +136,7 @@
         padding-right: 31px;
         background-color: white;
         border: 1px solid rgba(226, 49, 54, 1);    
+        cursor: pointer;
         margin-right: 20px;
     }
     .button_active{
