--- a/src/components/common/card/style.module.css
+++ b/src/components/common/card/style.module.css
@@ -69,11 +69,10 @@
 @media only screen and (max-width:694px) {
     .Card{
         width: 49%;
-        height: 100%;
     }
     .Card_imgs{
         width:100%;
-        height: 100%;
+        height: auto;
     }
     .Card_imgs span{
         position: absolute;
