--- a/src/components/common/card/style.module.css
+++ b/src/components/common/card/style.module.css
@@ -17,11 +17,11 @@
     font-weight: 700;
     font-size: 21px;
     line-height: 24px;
-    font-family: 'Clear Sans';
+ 
     padding: 2px 28px;
 }
 .Card h4{
-    font-family: 'Clear Sans';
+ 
     font-weight: 700;
     font-size: 18px;
     line-height: 25px;
@@ -42,14 +42,13 @@
     margin-left: 14px;
     margin-right: 14px;
 }
-.card_buttons button{
+
+.slug{
     width: 45%;
     padding: 10px 20px;
     margin-bottom: 16px;
     cursor: pointer;
-}
-.card_buttons button:nth-child(1){
-    font-family: 'Clear Sans';
+ 
     font-size: 18px;
     font-weight: 700;
     line-height: 25px;
@@ -57,8 +56,12 @@
     border: 2px solid rgba(226, 49, 54, 1);
     background-color: white;
 }
-.card_buttons button:nth-child(2){
-    font-family: 'Clear Sans';
+.add{
+    width: 45%;
+    padding: 10px 20px;
+    margin-bottom: 16px;
+    cursor: pointer;
+ 
     font-size: 18px;
     font-weight: 700;
     line-height: 25px;
@@ -66,13 +69,79 @@
     border: 2px solid rgba(226, 49, 54, 1);
     background-color: rgba(226, 49, 54, 1);
 }
+.decrement{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: white;
+    color: red;
+    border: 2px solid red;
+    font-size: 30px;
+}
+.icrement{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: white;
+    color: green;
+    border: 2px solid green;
+    font-size: 25px;
+}
+.count{
+    margin-top: 10px;
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+}
 @media only screen and (max-width:694px) {
     .Card{
         width: 49%;
     }
+    .count{
+        margin-top: 0px;
+        color: black;
+        font-size: 20px;
+        font-weight: 600;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
     .Card_imgs{
         width:100%;
         height: auto;
+    }
+    .icrement{
+        width: 30px;
+        height: 28px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        background-color: white;
+        color: green;
+        border: 2px solid green;
+        font-size: 20px;
+    }
+    .decrement{
+        width: 40px;
+        height: 28px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        background-color: white;
+        color: red;
+        border: 2px solid red;
+        font-size: 20px;
     }
     .Card_imgs span{
         position: absolute;
@@ -83,7 +152,7 @@
         font-weight: 700;
         font-size: 21px;
         line-height: 24px;
-        font-family: 'Clear Sans';
+     
         padding: 2px 28px;
     }
    .Card_imgs img{
@@ -91,7 +160,7 @@
     height: 140px;
    } 
    .Card h4{
-    font-family: 'Clear Sans';
+ 
     font-weight: 700;
     font-size: 13px;
     line-height: 20px;
@@ -106,7 +175,8 @@
     display: flex;
     justify-content: space-between;
 }
-.card_buttons button:nth-child(1){
+
+.slug{
     width: 100%;
     padding: 2px 2px;
     margin-bottom: 6px;
@@ -114,7 +184,7 @@
     font-weight: 500;
     margin-right: 5px;
 }
-.card_buttons button:nth-child(2){
+.add{
     width: 100%;
     padding: 2px 2px;
     margin-bottom: 6px;
