--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -5,7 +5,7 @@
     padding: 0 10px;
   }
   .headerTopPhone{
-    font-family: 'Clear Sans';
+ 
     font-weight: 500;
     color: rgba(11, 63, 100, 1);
     font-size: 20px;
@@ -21,7 +21,7 @@
     background-color: transparent;
     border: transparent;
     color: gray;
-    font-family: 'Clear Sans';
+ 
     font-weight: 500;
     font-size: 20px;
     border-bottom: 1px solid   gray;
@@ -36,7 +36,7 @@
     border-bottom: 2px solid   rgba(11, 63, 100, 1);
     padding: 5px;
     text-transform: uppercase;
-    font-family: 'Clear Sans';
+ 
     font-weight: 500;
     font-size: 20px;
     transition: 0.3s;
@@ -53,6 +53,7 @@
 .header_cart {
     position: relative;
     margin-left: 20px;
+    cursor: pointer;
 }
 .header_cart span{
     position: absolute;
