--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: rgba(236, 236, 236, 1);
+    background-color: #ECECEC;
 }
 .container{
   max-width: 1340px;
