--- a/src/components/about/aboutContentBottom/style.module.css
+++ b/src/components/about/aboutContentBottom/style.module.css
@@ -64,7 +64,16 @@
     text-align: center;
     color: rgba(11, 63, 100, 1);
 }
+.mobile_sertficate{
+    display: none;
+}
 @media only screen and (max-width:900px) {
+    .desktop_sertficate{
+        display: none;
+    }
+    .mobile_sertficate{
+        display: block;
+    }
     .about_content_bottom_cards{
         padding: 0 20px;
     }
