--- a/src/components/home/blog/style.module.css
+++ b/src/components/home/blog/style.module.css
@@ -16,6 +16,21 @@
 .borderWrap{
     padding: 3px;
 }
+.data_button{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24.3px;
+    color: rgba(226, 49, 54, 1);
+    border: 2px solid red;
+    width: fit-content;
+    padding: 10px 20px;
+    margin-left: auto;
+    margin-right: 20px;
+}
+
 .cardBlog{
     background-color: white;
     border:  3px solid #0B3F64;
