--- a/src/components/product/Content/style.module.css
+++ b/src/components/product/Content/style.module.css
@@ -84,9 +84,71 @@
     margin: 0;
     padding: 0;
 }
+.decrement{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: white;
+    color: red;
+    border: 2px solid red;
+    font-size: 30px;
+}
+.icrement{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: white;
+    color: green;
+    border: 2px solid green;
+    font-size: 25px;
+}
+.count{
+    margin-top: 10px;
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 @media only screen and (max-width:900px) {
     .content h2{
         margin-top: 40px;
+    }
+}
+@media only screen and(max-width:694px) {
+    .icrement{
+        width: 30px;
+        height: 28px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        background-color: white;
+        color: green;
+        border: 2px solid green;
+        font-size: 20px;
+    }
+    .decrement{
+        width: 40px;
+        height: 28px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        background-color: white;
+        color: red;
+        border: 2px solid red;
+        font-size: 20px;
     }
 }
 @media only screen and (max-width:515px) {
