--- a/src/components/common/card/style.module.css
+++ b/src/components/common/card/style.module.css
@@ -72,6 +72,8 @@
 .decrement{
     width: 50px;
     height: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -85,6 +87,8 @@
 .icrement{
     width: 50px;
     height: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -120,6 +124,8 @@
     .icrement{
         width: 30px;
         height: 28px;
+        padding-top: 13px;
+        padding-bottom: 13px;
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -128,11 +134,13 @@
         background-color: white;
         color: green;
         border: 2px solid green;
-        font-size: 20px;
+        font-size: 12px;
     }
     .decrement{
-        width: 40px;
+        width: 30px;
         height: 28px;
+        padding-top: 13px;
+        padding-bottom: 13px;
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -141,7 +149,7 @@
         background-color: white;
         color: red;
         border: 2px solid red;
-        font-size: 20px;
+        font-size: 12px;
     }
     .Card_imgs span{
         position: absolute;
@@ -150,9 +158,8 @@
         background: linear-gradient(270deg, rgba(11, 63, 100, 0.15) 0%, rgba(11, 63, 100, 0.9) 100%);
         color: white;
         font-weight: 700;
-        font-size: 21px;
+        font-size: 11px;
         line-height: 24px;
-     
         padding: 2px 28px;
     }
    .Card_imgs img{
