--- a/src/components/common/card/style.module.css
+++ b/src/components/common/card/style.module.css
@@ -3,6 +3,14 @@
     margin-bottom: 15px;
     width: 324px;
 }
+.text_button{
+    background-color: white;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    width: 100%;
+  }
 .Card_imgs{
     width: 324px;
     height: 50%;
@@ -20,8 +28,7 @@
  
     padding: 2px 28px;
 }
-.Card h4{
- 
+.text_button h4{
     font-weight: 700;
     font-size: 18px;
     line-height: 25px;
@@ -57,11 +64,10 @@
     background-color: white;
 }
 .add{
-    width: 45%;
+    width: fit-content;
     padding: 10px 20px;
     margin-bottom: 16px;
     cursor: pointer;
- 
     font-size: 18px;
     font-weight: 700;
     line-height: 25px;
@@ -105,6 +111,7 @@
     font-size: 20px;
     font-weight: 600;
 }
+
 @media only screen and (max-width:694px) {
     .Card{
         width: 49%;
@@ -136,6 +143,7 @@
         border: 2px solid green;
         font-size: 12px;
     }
+
     .decrement{
         width: 30px;
         height: 28px;
@@ -166,7 +174,7 @@
     width: 100%;
     height: 140px;
    } 
-   .Card h4{
+   .text_button h4{
  
     font-weight: 700;
     font-size: 13px;
