--- a/src/components/order/style.module.css
+++ b/src/components/order/style.module.css
@@ -108,7 +108,20 @@
     color: #E23136;
     background-color: transparent;
 }
-
+.size_count_item{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 10px;
+}
+.size_count_item li span{
+    font-size: 16px;
+    font-weight: 600;
+}
+.size_count_list{
+    border-bottom: 1px solid rgb(176, 176, 176);
+    padding-bottom: 5px;
+}
 @media only screen and (max-width:900px) {
     .section_order{
         margin-top: 60px;
